--- a/src/app/theme/components/contacts/contacts.component.html
+++ b/src/app/theme/components/contacts/contacts.component.html
@@ -1,17 +1,17 @@
 <span fxLayoutAlign="center center" class="item">
   <mat-icon [color]="iconColor" [ngClass]="'mat-icon-' + iconSize">call</mat-icon>
-  <span class="px-1">(+100) 123 456 7890</span>
+  <span class="px-1">(+1) 770 973 0052</span>
 </span>
 @if (dividers) {
-  <span class="v-divider" fxShow="false" fxShow.gt-xs></span>
+<span class="v-divider" fxShow="false" fxShow.gt-xs></span>
 }
 <span fxLayoutAlign="center center" class="item" fxShow="false" fxShow.gt-xs>
   <mat-icon [color]="iconColor" [ngClass]="'mat-icon-' + iconSize">location_on</mat-icon>
-  <span class="px-1">2903 Avenue Z, Brooklyn, NY, USA</span>
+  <span class="px-1">2635 Sandy Plains Rd, Marietta, GA 30066</span>
 </span>
 @if (dividers) {
-  <span class="v-divider" fxShow="false" fxShow.gt-xs></span>
-} 
+<span class="v-divider" fxShow="false" fxShow.gt-xs></span>
+}
 <span fxLayoutAlign="center center" class="item" fxShow="false" fxShow.gt-sm>
   <mat-icon [color]="iconColor" [ngClass]="'mat-icon-' + iconSize">mail</mat-icon>
   <span class="px-1">info&#64;labellas-pizza.com</span>
