starg working on menu

--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -1,4 +1,4 @@
-<app-header-image [backgroundImage]="'images/others/contact.jpg'" [bgImageAnimate]="false" [contentOffsetToTop]="true"
+<app-header-image [backgroundImage]="'images/others/home.jpg'" [bgImageAnimate]="false" [contentOffsetToTop]="true"
     [title]="'Contact Us'" [desc]="'Got a question? We\'ll give you straight answer'">
 </app-header-image>
 
@@ -83,7 +83,7 @@
                         </form>
                     </div>
                     <div fxFlex="100" fxFlex.gt-sm="50" class="py-3">
-                        <img src="images/others/about-1.jpg" alt="about-2" class="mw-100 mb-4">
+                        <img src="images/others/contact.jpg" alt="about-2" class="mw-100 mb-4">
                         <app-social-icons [iconSize]="'lg'" [iconColor]="'primary'" fxLayout="row"
                             fxLayoutAlign="end center"></app-social-icons>
                     </div>
