--- a/src/app/shared/header-image/header-image.component.scss
+++ b/src/app/shared/header-image/header-image.component.scss
@@ -25,6 +25,7 @@
             font-family: $secondary-font-family;
             font-size: 60px;
             padding: 0 16px;
+            font-weight: 900;
             text-align: center;
         }
 
