--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,7 +1,6 @@
 @if (settings.header == 'image') {
-<app-header-image [backgroundImage]="'images/others/homepage.jpg'" [bgImageAnimate]="true" [contentOffsetToTop]="true"
-    [title]="'Welcome to Restaurant'" [desc]="'Booking a table online is easy'" [isHomePage]="true"
-    [fullscreen]="false">
+<app-header-image [backgroundImage]="'images/others/home.jpg'" [bgImageAnimate]="true" [contentOffsetToTop]="true"
+    [title]="'Welcome to Labellas'" [desc]="'Authentic New York Pizza'" [isHomePage]="true" [fullscreen]="false">
 </app-header-image>
 }
 
@@ -11,36 +10,31 @@
 
 @if (settings.header == 'video') {
 <app-header-video [backgroundVideo]="'http://themeseason.com/data/videos/restaurant.mp4'" [contentOffsetToTop]="true"
-    [title]="'Welcome to Restaurant'" [desc]="'Booking a table online is easy'" [isHomePage]="true"
-    [fullscreen]="false">
+    [title]="'Welcome to Labellas'" [desc]="'Authentic New York Pizza'" [isHomePage]="true" [fullscreen]="false">
 </app-header-video>
 }
 
 <div class="section mt-3">
     <div class="px-3">
         <div class="theme-container">
-            <h1 class="section-title">About Us</h1>
-            <p class="section-desc text-muted">Restoring authenticity to food from the ground up is the missioin that
-                drives us. Restauration is the realization of a dream.</p>
+            <h1 class="section-title">Labella's Pizzeria</h1>
+            <p class="section-desc text-muted">Taste a slice of New York!</p>
             <mat-card class="p-0 o-hidden" fxLayout="row wrap">
                 <div fxFlex="100" fxFlex.gt-sm="50" fxFlex.sm="50">
-                    <img src="images/others/about-us.jpg" alt="about" class="mw-100 d-block">
+                    <img src="images/others/home-1.jpg" alt="about" class="mw-100 d-block">
                 </div>
                 <div fxFlex="100" fxFlex.gt-sm="50" fxFlex.sm="50" class="py-3 px-4">
-                    <h1 class="secondary-font primary-color mb-2">Since 1987, at your service</h1>
-                    <p> Restourant are many variations of passages of Lorem Ipsum available, but the majority have
-                        suffered alteration in some form, by injected humour, or randomised words which don't look even
-                        slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there
-                        isn't anything embarrassing hidden in the middle of text. Vestibulum ante ipsum primis in
-                        faucibus orci luctus et ultrices posuere cubilia curae; Proin a ullamcorper purus. Sed malesuada
-                        a dolor et aliquet.</p>
-                    <p> After 16 years in the restaurant business, 9 in farming, and several years dedicated to the
-                        study of nutrition, we decided now was the right time to take all that experience and synthesize
-                        it into a local eatery where people can enjoy exquisite food, support local food producers, and
-                        eat the kind of food they can feel good about.</p>
+                    <h1 class="secondary-font primary-color mb-2">Since 1992, Family owned and operated.</h1>
+                    <p>Rick and his family have been serving up authentic New York pizza to customers for over 30 years.
+                    </p>
+                    <p>Labella's is a special place for it's amazing food but also where the community comes to gather
+                        to enjjoy neighbor's and good times.</p>
+                    <p>The signature item on the menu is of course New York pizza. Labella's will not compromise on the
+                        ingredients and care in making every pie.</p>
+                    <p>Come join us and experience the best local pizza available. </p>
                     <div fxLayout="row wrap" fxLayoutAlign="space-between center" class="pt-3">
-                        <img src="images/others/signature.png" alt="signature">
-                        <a mat-raised-button routerLink="/about" color="primary" class="uppercase">Read more</a>
+                        <!-- <img src="images/others/signature.png" alt="signature"> -->
+                        <!-- <a mat-raised-button routerLink="/about" color="primary" class="uppercase">Read more</a> -->
                     </div>
                 </div>
             </mat-card>
@@ -48,7 +42,7 @@
     </div>
 </div>
 
-<div class="section default mt-3">
+<!-- <div class="section default mt-3">
     <div class="px-3">
         <div class="theme-container">
             <h1 class="section-title">Special menu</h1>
@@ -59,9 +53,9 @@
             </div>
         </div>
     </div>
-</div>
+</div> -->
 
-<div class="section">
+<!-- <div class="section">
     <div class="px-3">
         <div class="theme-container">
             <h1 class="section-title mb-3">Today Menu</h1>
@@ -70,7 +64,7 @@
             <app-today-menu [menuItem]="todayMenu"></app-today-menu>
         </div>
     </div>
-</div>
+</div> -->
 
 <div class="section default mt-3">
     <div class="px-3">
@@ -104,4 +98,4 @@
 <!-- <app-testimonials></app-testimonials>  
 <app-get-app></app-get-app>
 <app-our-awards></app-our-awards>  -->
-<app-get-in-touch></app-get-in-touch>
+<!-- <app-get-in-touch></app-get-in-touch> -->
