--- a/src/app/shared/social-icons/social-icons.component.html
+++ b/src/app/shared/social-icons/social-icons.component.html
@@ -1,16 +1,20 @@
-<a href="https://www.facebook.com/search/top?q=labella%27s%20pizzeria" class="social-icon">
+<a href="https://www.facebook.com/search/top?q=labella%27s%20pizzeria" class="social-icon" matTooltip="Facebook">
   <svg class="mat-icon" viewBox="0 0 24 24" [ngClass]="['mat-icon-' + iconSize, 'mat-'+ iconColor]">
     <path
       d="M5,3H19A2,2 0 0,1 21,5V19A2,2 0 0,1 19,21H5A2,2 0 0,1 3,19V5A2,2 0 0,1 5,3M18,5H15.5A3.5,3.5 0 0,0 12,8.5V11H10V14H12V21H15V14H18V11H15V9A1,1 0 0,1 16,8H18V5Z" />
   </svg>
 </a>
-<a href="https://www.yelp.com/biz/labellas-pizzeria-marietta-4?osq=labellas+pizzeria" class="social-icon">
+<div class="m-1"></div>
+<a href="https://www.yelp.com/biz/labellas-pizzeria-marietta-4?osq=labellas+pizzeria" class="social-icon"
+  matTooltip="Yelp">
   <svg class="mat-icon" viewBox="0 0 24 24" [ngClass]="['mat-icon-' + iconSize, 'mat-'+ iconColor]">
     <path
       d="M14.48,1.96l-2.95,8.44c-.42,1.21-1.94,1.21-2.36,0L6.21,1.96c-.33-.94.28-1.96,1.18-1.96h5.9c.9,0,1.51,1.02,1.18,1.96ZM.36,9.82L0,14.17c-.05.66.66,1.17,1.37.99l6.4-1.67c.92-.24,1.01-1.35.14-1.74l-6.04-2.68c-.67-.3-1.46.09-1.52.75ZM6.28,22.11l3.16-5.81c.45-.83-.3-1.66-1.17-1.29l-6.09,2.57c-.68.29-.93,1.13-.49,1.62l2.93,3.24c.44.49,1.31.32,1.66-.33ZM18.81,9.07l-6.04,2.68c-.87.38-.77,1.5.14,1.74l6.4,1.67c.71.19,1.43-.33,1.37-.99l-.36-4.35c-.05-.66-.84-1.05-1.52-.75ZM16.07,22.44l2.93-3.24c.44-.49.19-1.33-.49-1.62l-6.09-2.57c-.87-.37-1.62.46-1.17,1.29l3.16,5.81c.35.65,1.22.82,1.66.33Z"
       style="fill:currentColor; stroke-width:0px;" />
   </svg>
 </a>
+<div class="m-1"></div>
+
 <!-- <a href="/" class="social-icon">
   <svg class="mat-icon" viewBox="0 0 24 24" [ngClass]="['mat-icon-' + iconSize, 'mat-'+ iconColor]">
       <path d="M5,3H19A2,2 0 0,1 21,5V19A2,2 0 0,1 19,21H5A2,2 0 0,1 3,19V5A2,2 0 0,1 5,3M17.71,9.33C18.19,8.93 18.75,8.45 19,7.92C18.59,8.13 18.1,8.26 17.56,8.33C18.06,7.97 18.47,7.5 18.68,6.86C18.16,7.14 17.63,7.38 16.97,7.5C15.42,5.63 11.71,7.15 12.37,9.95C9.76,9.79 8.17,8.61 6.85,7.16C6.1,8.38 6.75,10.23 7.64,10.74C7.18,10.71 6.83,10.57 6.5,10.41C6.54,11.95 7.39,12.69 8.58,13.09C8.22,13.16 7.82,13.18 7.44,13.12C7.81,14.19 8.58,14.86 9.9,15C9,15.76 7.34,16.29 6,16.08C7.15,16.81 8.46,17.39 10.28,17.31C14.69,17.11 17.64,13.95 17.71,9.33Z" />
