--- a/src/app/theme/components/user-menu/user-menu.component.html
+++ b/src/app/theme/components/user-menu/user-menu.component.html
@@ -1,44 +1,49 @@
 <a mat-button [matMenuTriggerFor]="userMenu" #userMenuTrigger="matMenuTrigger" [dir]="settings.rtl ? 'rtl' : 'ltr'">
     <mat-icon class="mat-icon-sm m-0">person</mat-icon>
-    <span fxShow="false" fxShow.gt-sm class="mx-1 uppercase">{{ 'ACCOUNT' | translate }}</span> 
+    <span *ngIf="!loginUser" fxShow="false" fxShow.gt-sm class="mx-1 uppercase">{{ 'ACCOUNT' | translate }}</span>
+    <span *ngIf="loginUser" fxShow="false" fxShow.gt-sm class="mx-1 uppercase">{{ loginUser.userName }}</span>
     <mat-icon class="mat-icon-sm caret" iconPositionEnd>arrow_drop_down</mat-icon>
 </a>
 <mat-menu #userMenu="matMenu" [overlapTrigger]="false" xPosition="before" class="app-menu-panel user-menu">
-    <span (mouseleave)="userMenuTrigger.closeMenu()">
-        <div fxLayout="row" fxLayoutAlign="start center" class="user-info">                   
+    <span *ngIf="loginUser" (mouseleave)="userMenuTrigger.closeMenu()">
+        <div fxLayout="row" fxLayoutAlign="start center" class="user-info">
             <img src="images/others/user.jpg" alt="user-image" width="50">
             <p class="m-0">Emilio Verdines <br> <small><i>emilio_v</i></small></p>
         </div>
         <div class="divider"></div>
-        <a mat-menu-item routerLink="/account/dashboard"> 
+        <a mat-menu-item routerLink="/account/dashboard">
             <mat-icon class="mat-icon-sm">settings</mat-icon>
-            <span>Account Settings</span> 
-        </a> 
-        <a mat-menu-item routerLink="/account/favorites"> 
+            <span>Account Settings</span>
+        </a>
+        <a mat-menu-item routerLink="/account/favorites">
             <mat-icon class="mat-icon-sm">favorite_border</mat-icon>
-            <span [matBadge]="appService.Data.favorites.length" 
-                  [matBadgeHidden]="appService.Data.favorites.length == 0"
-                  matBadgeSize="small" 
-                  matBadgeColor="warn" 
-                  matBadgeOverlap="false"
-                  aria-hidden="false">Favorites</span> 
-        </a> 
-        <a mat-menu-item routerLink="/account/profile"> 
+            <span [matBadge]="appService.Data.favorites.length" [matBadgeHidden]="appService.Data.favorites.length == 0"
+                matBadgeSize="small" matBadgeColor="warn" matBadgeOverlap="false" aria-hidden="false">Favorites</span>
+        </a>
+        <a mat-menu-item routerLink="/account/profile">
             <mat-icon class="mat-icon-sm">edit</mat-icon>
-            <span>Edit Profile</span> 
+            <span>Edit Profile</span>
         </a>
-        <a mat-menu-item routerLink="/lock-screen"> 
+        <a mat-menu-item routerLink="/lock-screen">
             <mat-icon class="mat-icon-sm">lock</mat-icon>
-            <span>Lock screen</span> 
+            <span>Lock screen</span>
         </a>
-        <a mat-menu-item routerLink="/faq"> 
+        <a mat-menu-item routerLink="/faq">
             <mat-icon class="mat-icon-sm">help</mat-icon>
-            <span>Help</span> 
+            <span>Help</span>
         </a>
         <div class="divider"></div>
-        <a mat-menu-item routerLink="/login"> 
+        <a mat-menu-item routerLink="/login">
             <mat-icon class="mat-icon-sm">power_settings_new</mat-icon>
-            <span>Sign Out</span> 
+            <span>Sign Out</span>
         </a>
     </span>
-</mat-menu>  
+    <span *ngIf="!loginUser" (mouseleave)="userMenuTrigger.closeMenu()">
+        <div class="divider"></div>
+        <a mat-menu-item routerLink="/login">
+            <mat-icon class="mat-icon-sm">power_settings_new</mat-icon>
+            <span>Sign In</span>
+        </a>
+    </span>
+
+</mat-menu>
