--- a/src/app/theme/styles/_theme.scss
+++ b/src/app/theme/styles/_theme.scss
@@ -1,55 +1,60 @@
-@use '@angular/material' as mat;
-@import './variables'; 
-$custom-typography: mat.m2-define-typography-config( 
+@use "@angular/material" as mat;
+@import "./variables";
+$custom-typography: mat.m2-define-typography-config(
     $font-family: $font-family,
     $body-1: mat.m2-define-typography-level(14px, 20px, 400),
-    $button: mat.m2-define-typography-level(14px, 14px, 500),
+    $button: mat.m2-define-typography-level(14px, 14px, 500)
 );
-@include mat.all-component-typographies($custom-typography); 
+@include mat.all-component-typographies($custom-typography);
 @include mat.elevation-classes();
 @include mat.app-background();
 
-@import 'theme-reset';
-@import 'create-custom-theme';
-.app{
-    &.green{
+@import "theme-reset";
+@import "create-custom-theme";
+.app {
+    &.green {
         @import "skins/green";
         @include mat.all-component-colors($green-theme);
         @include theme-reset($green-theme);
     }
-    &.blue{
+    &.blue {
         @import "skins/blue";
         @include mat.all-component-colors($blue-theme);
         @include theme-reset($blue-theme);
     }
-    &.red{
+    &.red {
         @import "skins/red";
         @include mat.all-component-colors($red-theme);
         @include theme-reset($red-theme);
     }
-    &.pink{
+    &.pink {
         @import "skins/pink";
         @include mat.all-component-colors($pink-theme);
         @include theme-reset($pink-theme);
     }
-    &.purple{
+    &.purple {
         @import "skins/purple";
         @include mat.all-component-colors($purple-theme);
         @include theme-reset($purple-theme);
     }
-    &.grey{
+    &.grey {
         @import "skins/grey";
         @include mat.all-component-colors($grey-theme);
         @include theme-reset($grey-theme);
     }
-    &.orange-dark{
+    &.green-dark {
+        @import "skins/green-dark";
+        @include mat.all-component-colors($green-dark-theme);
+        @include theme-reset($green-dark-theme);
+    }
+    &.orange-dark {
         @import "skins/orange-dark";
         @include mat.all-component-colors($orange-dark-theme);
-        @include theme-reset($orange-dark-theme);     
+        @include theme-reset($orange-dark-theme);
     }
-    &.custom{
+    &.custom {
         @import "skins/custom";
         @include mat.all-component-colors($custom-theme);
-        @include theme-reset($custom-theme);   
+        @include theme-reset($custom-theme);
     }
 }
