--- a/src/app/theme/styles/_variables.scss
+++ b/src/app/theme/styles/_variables.scss
@@ -1,5 +1,7 @@
-$font-family: 'Montserrat', sans-serif;
-$secondary-font-family: 'Lora', serif;  
+// $font-family: "Montserrat", sans-serif;
+// $secondary-font-family: "Red Rose", serif;
+$font-family: "Red Rose", serif;
+$secondary-font-family: "Montserrat", sans-serif;
 $theme-max-width: 1300px;
 $top-toolbar-height: 36px;
 $main-toolbar-height: 72px;
